k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ziekenhuis-planner
  namespace: tomemming
spec:
  selector:
    matchLabels:
      app: ziekenhuis-planner
  replicas: 1
  template:
    metadata:
      labels:
        app: ziekenhuis-planner
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: php-fpm
          image: ghcr.io/tinux-it/ziekenhuis-planner:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          volumeMounts:
            - name: app-volume
              mountPath: /app
            - name: php-socket
              mountPath: /php-socket
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          volumeMounts:
            - name: app-volume
              mountPath: /app
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: php-socket
              mountPath: /php-socket
      volumes:
        - name: app-volume
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: php-socket
          emptyDir: {}
