k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ziekenhuis-planner-ingress
  namespace: tomemming
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - planner.tomemming.nl
  rules:
    - host: planner.tomemming.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ziekenhuis-planner-service
                port:
                  number: 80
